# shogi-kifu-converter

./: .gitmodules  Cargo.toml  LICENSE  README.crates.io.md  README.md  build.rs
.github/workflows/: tag.yml
data/tests/csa/: WCSC32_F7_NBS_DLS.csa  WCSC32_F7_NBS_DLS.json  floodgate.csa  floodgate.json  initial_2.csa  initial_2.csa.json  initial_4.csa  initial_4.csa.json  initial_6.csa  initial_6.json  initial_hi.csa  initial_hi.csa.json  initial_hirate.csa  initial_hirate.csa.json  initial_ka.csa  initial_ka.csa.json  initial_ky.csa  initial_ky.json  tsumeshogi.csa  tsumeshogi.csa.json  tsumeshogi.json  v22.csa  v22.csa.json
data/tests/ki2/: 4.json  4.ki2  4.ki2u  simple.json  simple.ki2  simple.ki2u
data/tests/kif/: Shogidokoro.json  Shogidokoro.kif  Shogidokoro.kifu  empty.json  empty.kif  empty.kifu  everyday_20211107.json  everyday_20211107.kif  everyday_20211107.kifu  everyday_20220604.json  everyday_20220604.kif  everyday_20220604.kifu  example.json  example.kif  example.kifu  forks.json  forks.kif  forks.kifu  oui202106290101.json  oui202106290101.kif  piyo-shogi_KY.json  piyo-shogi_KY.kif  piyo-shogi_KY.kifu
examples/: csa.rs  csa2jkf.rs  csa2kif.rs  jkf2ki2.rs  jkf2kif.rs  jkf2usi.rs  kif2csa.rs  kif2jkf.rs
src/: converter.rs  csa.rs  error.rs  jkf.rs  kif.rs  lib.rs  normalizer.rs  parser.rs  shogi_core.rs
src/converter/: csa.rs  kakinoki.rs  ki2.rs  kif.rs
src/jkf/: from_pkf.rs  into_pkf.rs
src/parser/: kakinoki.rs  ki2.rs  kif.rs
src/protos/: pkf.proto
src/shogi_core/: from.rs  into.rs
