[package]
name = "shogi-kifu-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
csa = "1.0.2"
encoding_rs = "0.8.31"
nom = "7"
shogi_core = "0.1.4"
shogi_legality_lite = "0.1.1"
thiserror = "1.0"

[dev-dependencies]
jsonschema = "0.16"
