[package]
name = "shogi-kifu-converter"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Shogi kifu parsers and converters"
repository = "https://github.com/sugyan/shogi-kifu-converter"
documentation = "https://docs.rs/shogi-kifu-converter"
readme = "README.crates.io.md"
keywords = ["shogi", "kifu", "json-kifu-format"]
authors = ["sugyan <sugi1982+github@gmail.com>"]
exclude = ["data/", "examples/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
csa = "1.0.2"
encoding_rs = "0.8.31"
nom = "7"
protobuf = "3.1.0"
shogi_core = "0.1.5"
shogi_official_kifu = "0.1.1"
shogi_legality_lite = "0.1.2"
thiserror = "1.0"

[dev-dependencies]
jsonschema = "0.16"

[build-dependencies]
protobuf-codegen = "3.1.0"
protoc-bin-vendored = "3.0.0"
